GG-19155: Fix test.